--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "description": "a backend for youtube",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "Krrish Khandelwal",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "prettier": "^3.4.2"
   }
 }
